Atualização arquivos js + css+index

--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="PT-BR">
     <head>
-        <title>Portfolio</title>
+        <meta charset="UTF-8">
+        <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
+        <link href='style.css' rel='stylesheet'>
+        <title>Portfólio Uíza</title>
     </head>
     <body>
-        Este é um teste
+        <div>
+            <h1>Projetos</h1>
+        </div>
+        <div>
+            <h1>Projetos</h1>
+        </div>
     </body>
 </html>
+
+
+<!---https://uizacarvalhosilva.github.io/portfolio-->
