--- a/index.html
+++ b/index.html
@@ -2,17 +2,48 @@
 <html lang="PT-BR">
     <head>
         <meta charset="UTF-8">
-        <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
-        <link href='style.css' rel='stylesheet'>
         <title>Portfólio Uíza</title>
+        <link rel="stylesheet" href="reset.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+        <link rel='stylesheet' href='style.css'>
     </head>
     <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li>Projetos</li>
+                    <li>Sobre Mim</li>
+                    <li>Contato</li>
+                    <a href="https://www.linkedin.com/in/uizacarvalho">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/uizacarvalho">Github</a>
+                    <a href="https://uizacarvalhosilva.github.io/portfolio">Portfólio</a>
+                    
+                </ul>
+            </nav>
+        </header>
+
         <div>
             <h1>Projetos</h1>
+            <ul>
+                <li><a href="urna/urna.html">Urna</a></li>
+                <li><a href="projetopizza/pizza.html">Pizza</a></li>
+                <li><a href="slide/slide.html">slide</a></li>
+                <li><a href="barbearia/index.html">Barbearia</a></li>
+            </ul>
         </div>
         <div>
-            <h1>Projetos</h1>
+            <h1>Sobre Mim</h1>
+            <p>                
+                Meu nome é Uíza
+            </p>
         </div>
+        <div>
+            <h1>Contato</h1>
+        </div>
+        <footer>
+            &copy Uíza de Carvalho Silva - 2023
+        </footer>
     </body>
 </html>
 
