Correção layout barbearia + ajuste das index

--- a/index.html
+++ b/index.html
@@ -12,40 +12,28 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li>Projetos</li>
                     <li>Sobre Mim</li>
                     <li>Contato</li>
-                    <a href="https://www.linkedin.com/in/uizacarvalho">Linkedin</a>
-                    <a href="https://www.linkedin.com/in/uizacarvalho">Github</a>
-                    <a href="https://uizacarvalhosilva.github.io/portfolio">Portfólio</a>
-                    
+
                 </ul>
             </nav>
         </header>
 
-        <div>
-            <h1>Projetos</h1>
+        <div class="projetos">
             <ul>
-                <li><a href="urna/urna.html">Urna</a></li>
+                <li background: url('urna.jpg')><a href="urna/urna.html">Urna</a></li>
                 <li><a href="projetopizza/pizza.html">Pizza</a></li>
                 <li><a href="slide/slide.html">slide</a></li>
                 <li><a href="barbearia/index.html">Barbearia</a></li>
             </ul>
         </div>
-        <div>
-            <h1>Sobre Mim</h1>
-            <p>                
-                Meu nome é Uíza
-            </p>
-        </div>
-        <div>
-            <h1>Contato</h1>
-        </div>
         <footer>
             &copy Uíza de Carvalho Silva - 2023
+            <a href="https://www.linkedin.com/in/uizacarvalho">Linkedin</a>
+            <a href="https://uizacarvalhosilva.github.io">Github</a>
         </footer>
     </body>
 </html>
 
 
-<!---https://uizacarvalhosilva.github.io/portfolio-->
+<!---https://uizacarvalhosilva.github.io/uizacarvalhosilva/-->
