--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li>Sobre Mim</li>
-                    <li>Contato</li>
+                    <li><a href="sobre.html">Sobre Mim</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+
 
                 </ul>
             </nav>
@@ -21,7 +22,7 @@
 
         <div class="projetos">
             <ul>
-                <li background: url('urna.jpg')><a href="urna/urna.html">Urna</a></li>
+                <li><a href="urna/urna.html">Urna</a></li>
                 <li><a href="projetopizza/pizza.html">Pizza</a></li>
                 <li><a href="slide/slide.html">slide</a></li>
                 <li><a href="barbearia/index.html">Barbearia</a></li>
@@ -29,8 +30,8 @@
         </div>
         <footer>
             &copy Uíza de Carvalho Silva - 2023
-            <a href="https://www.linkedin.com/in/uizacarvalho">Linkedin</a>
-            <a href="https://uizacarvalhosilva.github.io">Github</a>
+            <a href="https://www.linkedin.com/in/uizacarvalho"><img class="social" src="assets/images/linkedin.png"></a>
+            <a href="https://uizacarvalhosilva.github.io/uizacarvalhosilva/"><img class="social" src="assets/images/github.png"></a>
         </footer>
     </body>
 </html>
