Inclusão projeto skate

--- a/skate/index.html
+++ b/skate/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
-    <head>
-        <meta charset="UTF-8">
-        <title>Skate</title>
-
-    </head>
-    <body>
-
-    </body>
-    <footer>
-
-    </footer>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HZC Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+    <header class="cacecalho">
+        <button class="cabecalho_menu" area-label="Menu"><i></i></button>
+        <img src="assets/img/logo.svg" alt="Logotipo HZC" class="cabecalho_logo">
+        <button class="cabecalho_notificacao" area-label="Notificação"><i></i></button>
+    </header>
+    <nav class="menu-lateral">
+        <img src="assets/img/logo.svg" alt="Logotipo HZC" class="menu-lateral_logo">
+        <a href="#" class="menu-lateral_link menu-lateral_link_inicio menu-lateral_link--ativo">Início</a>
+        <a href="#" class="menu-lateral_link menu-lateral_link_videos">Vídeos</a>
+        <a href="#" class="menu-lateral_link menu-lateral_link_picos">Picos</a>
+        <a href="#" class="menu-lateral_link menu-lateral_link_integrantes">Integrantes</a>
+        <a href="#" class="menu-lateral_link menu-lateral_link_camisas">Camisas</a>
+        <a href="#" class="menu-lateral_link menu-lateral_link_pinturas">Pinturas</a>
+    </nav>
+    <script src="script.js"></script>
+</body>
 </html>
