Ajuste home do portfólio, projetos e skills

--- a/index.html
+++ b/index.html
@@ -2,32 +2,31 @@
 <html lang="PT-BR">
     <head>
         <meta charset="UTF-8">
-        <title>Portfólio Uíza</title>
+        <title>Home</title>
         <link rel="stylesheet" href="reset.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <link rel='stylesheet' href='style.css'>
     </head>
     <body>
         <header>
+
             <nav>
+                <!--<img class="home-logo" src="assets/images/github.png">-->
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="sobre.html">Sobre Mim</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-
-
+                    <li><a href="projetos.html">Projetos</a></li>
+                    <li><a href="skills.html">Skills</a></li>
                 </ul>
             </nav>
         </header>
-
-        <div class="projetos">
-            <ul>
-                <li><a href="urna/urna.html">Urna</a></li>
-                <li><a href="projetopizza/pizza.html">Pizza</a></li>
-                <li><a href="slide/slide.html">slide</a></li>
-                <li><a href="barbearia/index.html">Barbearia</a></li>
-            </ul>
-        </div>
+        <main class="home-conteudo">
+            <h1>Olá, sou a <strong>Uíza Carvalho.</strong></h1>
+            <h2>Desenvolvedora Front-end & Quality Assurance</h2>
+            <p>Iniciei a carreira em TI no estágio onde eu pude ter contato com manutenção e configuração de máquinas. 
+                No decorrer do tempo fui aprendendo um pouco mais sobre o sistema da empresa no qual eu prestava suporte para os colaboradores internos tanto no uso quanto na documentação desse software e precedimentos internos. 
+                Atualmente eu trabalho como Assistente de Suporte (N1) na área de hospedagem de sites, sou formada em Análise e Desenvolvimento de Sistemas e tenho especialização em BI. 
+                Tenho investido meu foco e recursos na área de Front-end e Garantia da qualidade (QA), que são áreas complementares bem importantes e que despertam meu interesse e paixão.</p>
+        </main>
         <footer>
             &copy Uíza de Carvalho Silva - 2023
             <a href="https://www.linkedin.com/in/uizacarvalho"><img class="social" src="assets/images/linkedin.png"></a>
@@ -35,6 +34,4 @@
         </footer>
     </body>
 </html>
-
-
 <!---https://uizacarvalhosilva.github.io/uizacarvalhosilva/-->
