--- a/skate/index.html
+++ b/skate/index.html
@@ -26,6 +26,25 @@
         <a href="#" class="menu-lateral_link menu-lateral_link_camisas">Camisas</a>
         <a href="#" class="menu-lateral_link menu-lateral_link_pinturas">Pinturas</a>
     </nav>
+    <main class="principal">
+        <h2 class="titulo-pagina">Início</h2>
+        <article class="cartao">
+            <img src="assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao_imagem">
+            <div class="cartao_conteudo">
+                <p class="cartao_destaque">Vídeo em destaque</p>
+                <h3 class="cartao_titulo">HZC - Título</h3>
+                <p class="cartao_perfil">Brunno Santos</p>
+                <p class="cartao_info cartao_info_tempo">33 minutos</p>
+              
+                <p class="visualizacao cartao_info_visualizacao">33 Visualizações</p>
+                <button class="cartao_botao cartao_botao_play cartao_botao_destaque">Assistir agora</button>
+
+            </div>
+        </article>
+        <div>
+
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
