Ajuste home do portfólio, projetos e skills

--- a/projetos.html
+++ b/projetos.html
@@ -20,40 +20,15 @@
         <main class="projetos">
             <h3>Projetos</h3>
             <ul>
-                <li>
-                    <a href="urna/urna.html"><img class="skills" src="assets/images/urna.png">Urna</a>
-                    <p class="listagem">
-                        Urna Eletrônica
-                    </p>
-                </li>
-                <li>
-                    <a href="projetopizza/pizza.html"><img class="skills" src="assets/images/pizzaria.png">Pizzaria</a>
-                    <p class="listagem">
-                        Pizzaria
-                    </p>
-                </li>
-                <li>
-                    <a href="slide/slide.html"><img class="skills" src="assets/images/slide.png">Slideshow</a>
-                    <p class="listagem">
-                        Slideshow
-                    </p>
-                </li>
-                <li>
-                    <a href="barbearia/index.html"><img class="skills" src="assets/images/barbearia.png">Barbearia</a>
-                    <p class="listagem">
-                        Barbearia
-                    </p>
-                </li>
-                <li>
-                    <a href="skate/index.html"><img class="skills" src="assets/images/skate.png">Skate</a>
-                    <p class="listagem">
-                        Skate
-                    </p>
-                </li>
+                <li><a href="urna/urna.html"><img class="skills" src="assets/images/urna.png">Urna</a></li>
+                <li><a href="projetopizza/pizza.html"><img class="skills" src="assets/images/pizzaria.png">Pizzaria</a></li>
+                <li><a href="slide/slide.html"><img class="skills" src="assets/images/slide.png">Slideshow</a></li>
+                <li><a href="barbearia/index.html"><img class="skills" src="assets/images/barbearia.png">Barbearia</a></li>
+                <li><a href="skate/index.html"><img class="skills" src="assets/images/skate.png">Skate</a></li>
             </ul>
         </main>
         <footer>
-            &copy Uíza de Carvalho Silva - 2023
+            &copy Uíza de Carvalho Silva - 2023</br>
             <a href="https://www.linkedin.com/in/uizacarvalho"><img class="social" src="assets/images/linkedin.png"></a>
             <a href="https://uizacarvalhosilva.github.io/uizacarvalhosilva/"><img class="social" src="assets/images/github.png"></a>
         </footer>
