--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     </head>
     <body>
         <header>
-
             <nav>
-                <!--<img class="home-logo" src="assets/images/github.png">-->
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projetos.html">Projetos</a></li>
@@ -20,18 +18,15 @@
             </nav>
         </header>
         <main class="home-conteudo">
-            <h1>Olá, sou a <strong>Uíza Carvalho.</strong></h1>
-            <h2>Desenvolvedora Front-end & Quality Assurance</h2>
-            <p>Iniciei a carreira em TI no estágio onde eu pude ter contato com manutenção e configuração de máquinas. 
+            <h1>Olá, sou a <strong>Uíza Carvalho.</strong></h1><h2><img class="img-main" src="assets/images/dev.png">Desenvolvedora Front-end</br>&</br><img class="img-main" src="assets/images/qa.png">Quality Assurance</h2><p>Iniciei a carreira em TI no estágio onde eu pude ter contato com manutenção e configuração de máquinas. 
                 No decorrer do tempo fui aprendendo um pouco mais sobre o sistema da empresa no qual eu prestava suporte para os colaboradores internos tanto no uso quanto na documentação desse software e precedimentos internos. 
                 Atualmente eu trabalho como Assistente de Suporte (N1) na área de hospedagem de sites, sou formada em Análise e Desenvolvimento de Sistemas e tenho especialização em BI. 
                 Tenho investido meu foco e recursos na área de Front-end e Garantia da qualidade (QA), que são áreas complementares bem importantes e que despertam meu interesse e paixão.</p>
         </main>
         <footer>
-            &copy Uíza de Carvalho Silva - 2023
+            &copy Uíza de Carvalho Silva - 2023</br>
             <a href="https://www.linkedin.com/in/uizacarvalho"><img class="social" src="assets/images/linkedin.png"></a>
             <a href="https://uizacarvalhosilva.github.io/uizacarvalhosilva/"><img class="social" src="assets/images/github.png"></a>
         </footer>
     </body>
 </html>
-<!---https://uizacarvalhosilva.github.io/uizacarvalhosilva/-->
