--- a/skills.html
+++ b/skills.html
@@ -27,7 +27,7 @@
         <img class="skills" src="assets/images/git2.png">
     </main>
     <footer>
-        &copy Uíza de Carvalho Silva - 2023
+        &copy Uíza de Carvalho Silva - 2023</br>
         <a href="https://www.linkedin.com/in/uizacarvalho"><img class="social" src="assets/images/linkedin.png"></a>
         <a href="https://uizacarvalhosilva.github.io/uizacarvalhosilva/"><img class="social" src="assets/images/github.png"></a>
     </footer>
